--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,4 +1,4 @@
-<div class="card border-0">
+<div class="container col-md-6 offset-md-3 mt-5">
     <div class="card-body">
         <div class="mb-3 text-center">
             <a href="" class="text-decoration-none">
@@ -12,13 +12,13 @@
             <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number" [(ngModel)]="phoneNumber">
         </div>
         <div class="mb-3 text-end">
-            <button class="btn btn-success mt-4" (click)="getOTP()">Get OTP</button>
+            <button class="btn btn-secondary mt-4" (click)="getOTP()">Get OTP</button>
         </div>
         <div class="form-input">
             <input type="text" name="otp" class="form-control" placeholder="Enter OTP" [(ngModel)]="otp">
         </div>
         <div class="mb-3 text-center">
-            <button class="btn btn-success mt-4 small-btn" (click)="checkOTP()">Go</button>
+            <button class="btn btn-secondary mt-4 small-btn" (click)="checkOTP()">Go</button>
         </div>
         <div class="mb-3 text-center">
             <a href="" class="text-decoration-none">
