--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -8,22 +8,22 @@
         <div class="mb-3 text-center">
             <h4>(or)</h4>
         </div>
+        <form name="form" [formGroup]="requiredForm" novalidate>
         <div class="form-input">
-            <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number" [(ngModel)]="phoneNumber">
-            <span *ngIf="correctFormat else notProper">{{ correctFormat }}</span> 
-            <ng-template #notProper>Invalid format or number</ng-template> <!-- displayes error message always (have to change it only when error)-->
+            <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number" formControlName="phoneNumber">
+            <span *ngIf="requiredForm.controls['phoneNumber'].invalid && requiredForm.controls['phoneNumber'].touched" >Invalid Phone Number format <!-- can move this to bundle--></span> 
         </div>
         <div class="mb-3 text-end">
             <button class="btn btn-secondary mt-4 small-btn" (click)="getOTP()">Get OTP</button>
         </div>
         <div class="form-input">
-            <input type="text" name="otp" class="form-control" placeholder="Enter OTP" [(ngModel)]="otp">
-            <span *ngIf="otpValidation else wrongOtp"> {{ otpValidation }} </span> 
-            <ng-template #wrongOtp>Wrong OTP</ng-template> <!-- displayes error message (have to change it only when error) -->
+            <input type="text" name="otp" class="form-control" placeholder="Enter OTP" formControlName="otp">
+            <span *ngIf="requiredForm.controls['otp'].invalid && requiredForm.controls['otp'].touched" >Invalid OTP <!-- can move this to bundle--></span> 
         </div>
         <div class="mb-3 text-center">
             <button class="btn btn-secondary mt-4 small-btn" (click)="checkOTP()">Go</button>
         </div>
+        </form>
         <div class="mb-3 text-center">
             <a href="" class="text-decoration-none">
                 <h4>Take a tour >>></h4>
