--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
     <h3>Welcome to Magnitudo Technologies</h3>
 </div>
 <app-loginpage></app-loginpage>
+<!-- <app-product-list></app-product-list> -->
