lots of new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<div class="headingPage">
-    <h3>Welcome to Magnitudo Technologies</h3>
-</div>
-<app-loginpage></app-loginpage>
+<!-- login page -->
+<!-- <app-loginpage></app-loginpage>    -->
+
+<!-- Product page contains top nav and bootom nav-->
 <!-- <app-product-list></app-product-list> -->
+
+<!-- sign up page -->
+<!-- <app-signup></app-signup> -->
+
+<!-- offer page -->
+<app-offers></app-offers>
