--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,33 +1,42 @@
 <div class="container col-md-6 offset-md-3 mt-5">
-    <div class="card-body">
-        <div class="mb-3 text-center">
-            <a href="" class="text-decoration-none">
-                <h4 style="color: red;">Walk in as Guest</h4>
-            </a>
+    <div class="container col-md-6 offset-md-3 mt-5">
+        <div>
+            <h1 class="card-title" style="text-align: center;">Magnitudo Technologies</h1>
         </div>
-        <div class="mb-3 text-center">
-            <h4>(or)</h4>
-        </div>
-        <form name="form" [formGroup]="requiredForm" novalidate>
-        <div class="form-input">
-            <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number" formControlName="phoneNumber">
-            <span *ngIf="requiredForm.controls['phoneNumber'].invalid && requiredForm.controls['phoneNumber'].touched" >Invalid Phone Number format <!-- can move this to bundle--></span> 
-        </div>
-        <div class="mb-3 text-end">
-            <button class="btn btn-secondary mt-4 small-btn" (click)="getOTP()">Get OTP</button>
-        </div>
-        <div class="form-input">
-            <input type="text" name="otp" class="form-control" placeholder="Enter OTP" formControlName="otp">
-            <span *ngIf="requiredForm.controls['otp'].invalid && requiredForm.controls['otp'].touched" >Invalid OTP <!-- can move this to bundle--></span> 
-        </div>
-        <div class="mb-3 text-center">
-            <button class="btn btn-secondary mt-4 small-btn" (click)="checkOTP()">Go</button>
-        </div>
-        </form>
-        <div class="mb-3 text-center">
-            <a href="" class="text-decoration-none">
-                <h4>Take a tour >>></h4>
-            </a>
+        <div class="card-body">
+            <div class="mb-3 text-center">
+                <a href="" class="text-decoration-none">
+                    <h4 style="color: red;">Walk in as Guest</h4>
+                </a>
+            </div>
+            <div class="mb-3 text-center">
+                <h4>(or)</h4>
+            </div>
+            <form name="form" [formGroup]="requiredForm" novalidate>
+                <div class="form-input">
+                    <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number"
+                        formControlName="phoneNumber">
+                    <span
+                        *ngIf="requiredForm.controls['phoneNumber'].invalid && requiredForm.controls['phoneNumber'].touched">Invalid
+                        Phone Number format <!-- can move this to bundle--></span>
+                </div>
+                <div class="mb-3 text-end">
+                    <button class="btn btn-secondary mt-4 small-btn" (click)="getOTP()">Get OTP</button>
+                </div>
+                <div class="form-input">
+                    <input type="text" name="otp" class="form-control" placeholder="Enter OTP" formControlName="otp">
+                    <span *ngIf="requiredForm.controls['otp'].invalid && requiredForm.controls['otp'].touched">Invalid
+                        OTP <!-- can move this to bundle--></span>
+                </div>
+                <div class="mb-3 text-center">
+                    <button class="btn btn-secondary mt-4 small-btn" (click)="checkOTP()">Go</button>
+                </div>
+            </form>
+            <div class="mb-3 text-center">
+                <a href="" class="text-decoration-none">
+                    <h4>Take a tour >>></h4>
+                </a>
+            </div>
         </div>
     </div>
 </div>
