--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
+<!-- Home page -->
+<app-home-page></app-home-page>
+<!-- sign up page -->
+<!-- <app-signup></app-signup> -->
+
 <!-- login page -->
 <!-- <app-loginpage></app-loginpage>    -->
 
 <!-- Product page contains top nav and bootom nav-->
 <!-- <app-product-list></app-product-list> -->
 
-<!-- sign up page -->
-<!-- <app-signup></app-signup> -->
-
 <!-- offer page -->
-<app-offers></app-offers>
+<!-- <app-offers></app-offers> -->
+
+<!-- Checkout page -->
+<!-- <app-checkout></app-checkout> -->
+<router-outlet></router-outlet>
