--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,7 @@
 <div class="container col-md-6 offset-md-3 mt-5">
+    <div>
+        <h1 class="card-title" style="text-align: center;">Magnitudo Technologies</h1>
+    </div>
     <div class="card-body">
         <div class="mb-3 text-center">
             <a routerLink="" class="text-decoration-none">
@@ -18,9 +21,8 @@
         </div>
         <div class="mb-3 text-center">
             <a routerLink="" class="text-decoration-none">
-                <h4 style="color: red;">Admin</h4>
+                <h4 style="color: red;">New Member</h4>
             </a>
         </div>
     </div>
 </div>
-<router-outlet></router-outlet>
