--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- Home page -->
-<app-home-page></app-home-page>
+<!-- Home page
+<app-home-page></app-home-page> -->
 <!-- sign up page -->
 <!-- <app-signup></app-signup> -->
 
@@ -15,3 +15,5 @@
 <!-- Checkout page -->
 <!-- <app-checkout></app-checkout> -->
 <router-outlet></router-outlet>
+
+
