--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -19,13 +19,13 @@
                         (click)="openDialog()">Help</button>
                 </div>
                 <div class="col">
-                    <button type="button" class="btn btn-primary btn-lg">Offers</button>
+                    <button type="button" class="btn btn-primary btn-lg" routerLink="/offerPage">Offers</button>
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-outline-dark btn-lg">Compliments</button>
                 </div>
                 <div class="col">
-                    <button type="button" class="btn btn-outline-dark btn-lg">Checkout</button>
+                    <button type="button" class="btn btn-outline-dark btn-lg" routerLink="/checkOutPage">Checkout</button>
                 </div>
             </div>
         </div>
