--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
             <h4>(or)</h4>
         </div>
         <div class="mb-3 text-center">
-            <a routerLink="loginPage" class="text-decoration-none">
+            <a routerLink="/loginPage" class="text-decoration-none">
                 <h4 style="color: red;">Login with OTP</h4>
             </a>
         </div>
@@ -20,7 +20,7 @@
             <h4>(or)</h4>
         </div>
         <div class="mb-3 text-center">
-            <a routerLink="" class="text-decoration-none">
+            <a routerLink="/signupPage" class="text-decoration-none">
                 <h4 style="color: red;">New Member</h4>
             </a>
         </div>
