table edit completed for product list page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="mb-3 text-center">
             <a routerLink="/loginPage" class="text-decoration-none">
-                <h4 style="color: red;">Login with OTP</h4>
+                <h4 style="color: red;">Member login</h4>
             </a>
         </div>
         <div class="mb-3 text-center">
@@ -21,7 +21,7 @@
         </div>
         <div class="mb-3 text-center">
             <a routerLink="/signupPage" class="text-decoration-none">
-                <h4 style="color: red;">New Member</h4>
+                <h4 style="color: red;">Sign up</h4>
             </a>
         </div>
     </div>
