New components and routing added

--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -22,7 +22,7 @@
                     <button type="button" class="btn btn-primary btn-lg" routerLink="/offerPage">Offers</button>
                 </div>
                 <div class="col">
-                    <button type="button" class="btn btn-outline-dark btn-lg">Compliments</button>
+                    <button type="button" class="btn btn-outline-dark btn-lg" routerLink="/complimentsPage">Compliments</button>
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-outline-dark btn-lg" routerLink="/checkOutPage">Checkout</button>
