--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -3,15 +3,7 @@
         <div>
             <h1 class="card-title" style="text-align: center;">Magnitudo Technologies</h1>
         </div>
-        <div class="card-body">
-            <div class="mb-3 text-center">
-                <a href="" class="text-decoration-none">
-                    <h4 style="color: red;">Walk in as Guest</h4>
-                </a>
-            </div>
-            <div class="mb-3 text-center">
-                <h4>(or)</h4>
-            </div>
+        <div class="card-body" style="padding-top: 40%;">
             <form name="form" [formGroup]="requiredForm" novalidate>
                 <div class="form-input">
                     <input type="text" name="phoneNumber" class="form-control" placeholder="Enter your mobile number"
