--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -17,7 +17,7 @@
                 <div class="col-sm">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item navbar-right mx-auto">
-                            <a routerLink="/checkOutPage">
+                            <a routerLink="/cart">
                                 <i class='fa-solid fa-cart-shopping' [attr.value]="productCountForTopNav"></i>
                             </a>
                         </li>
