--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -2,30 +2,29 @@
     <div class="container">
         <div class="col-lg-12">
             <div class="row">
-                <div class="col" style="padding: 20px;">
+                <div class="col" style="padding: 5px;text-align: center;">
                     <span style="font-size: 25px;">
                         Total Quantity : {{ productCount }}
                     </span>
                 </div>
-                <div class="col" style="padding: 20px;">
+                <div class="col" style="padding: 5px;text-align: center;">
                     <span style="font-size: 25px;">
                         Total Price : {{ totalPrice }}
                     </span>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <button mat-raised-button type="button" class="btn btn-success btn-lg"
-                        (click)="openDialog()">Help</button>
+            <div class="row" style="text-align: center;">
+                <div class="col py-2">
+                    <button mat-raised-button (click)="openDialog()">Help</button>
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-primary btn-lg" routerLink="/offerPage">Offers</button>
+                <div class="col py-2">
+                    <button mat-raised-button color="primary" routerLink="/offerPage">Offers</button>
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-dark btn-lg" routerLink="/complimentsPage">Compliments</button>
+                <div class="col py-2">
+                    <button mat-raised-button  routerLink="/complimentsPage">Compliments</button>
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-outline-dark btn-lg" routerLink="/checkOutPage">Checkout</button>
+                <div class="col py-2">
+                    <button mat-raised-button class="btn btn-outline-dark btn-lg" routerLink="/checkOutPage">Checkout</button>
                 </div>
             </div>
         </div>
