--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -57,22 +57,16 @@
                     </div>
                 </td>
                 <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit">
-                        <div>
-                            <a (click)="onTableSave(product)">
-                                <i class="fa fa-check" aria-hidden="true"></i>
-                            </a>
+                    <div *ngIf="product.isEdit" class="row">
+                        <div class="col my-1">
+                            <button (click)="onTableSave(product)" class="btn btn-success btn-sm">Save </button>
                         </div>
-                        <div>
-                            <a (click)="product.isEdit = false">
-                                <i class="fa fa-times" aria-hidden="true"></i>
-                            </a>
+                        <div class="col my-1">
+                            <button (click)="product.isEdit = false" class="btn btn-danger btn-sm">Cancel</button>
                         </div>
                     </div>
                     <div *ngIf="!product.isEdit">
-                        <a (click)="onTableEdit(product)">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                        </a>
+                        <button (click)="onTableEdit(product)" class="btn btn-primary btn-sm">Edit</button>
                     </div>
                 </td>
             </tr>
