product edit pop up completed

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div *ngIf="!product.isEdit">
-                        <button (click)="onTableEdit(product)" class="btn btn-primary btn-sm">Edit</button>
+                        <button (click)="openDialog()" class="btn btn-primary btn-sm">Edit</button>
                     </div>
                 </td>
             </tr>
