--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -59,15 +59,15 @@
                 <td class="align-middle text-center">
                     <div *ngIf="product.isEdit" class="row">
                         <div class="col my-1">
-                            <button (click)="onTableSave(product)" class="btn btn-success btn-sm">Save </button>
+                            <button (click)="onTableSave(product)" mat-button class="btn-sm">Save </button>
                         </div>
                         <div class="col my-1">
-                            <button (click)="product.isEdit = false" class="btn btn-danger btn-sm">Cancel</button>
+                            <button (click)="product.isEdit = false" mat-button class="btn-sm">Cancel</button>
                         </div>
                     </div>
                     <!-- open the edit table directly -->
                     <div *ngIf="!product.isEdit">
-                        <button (click)="openDialog(product)" class="btn btn-primary btn-sm">Edit</button>
+                        <button (click)="openDialog(product)" mat-button color="primary">Edit</button>
                     </div>
                     <!-- open the pop up -->
                     <!-- <div *ngIf="!product.isEdit">
