--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -1,7 +1,7 @@
 <!-- top navigation -->
 <app-top-nav></app-top-nav>
 <div class="container">
-    <table class="table table-hover">
+    <table class="table table-borderless">
         <thead>
             <tr>
                 <th class="align-middle text-center">
