--- a/src/app/bottom-nav/bottom-modal.component.html
+++ b/src/app/bottom-nav/bottom-modal.component.html
@@ -12,5 +12,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button class="col" color="primary">Okay</button>
-  <button mat-button class="col">Cancel</button>
+  <button mat-button class="col" (click)="helpModalClose()">Cancel</button>
 </div>
