--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -17,11 +17,12 @@
                 </div>
             </div>
             <div class="col-md-12" style="text-align: center;">
-                <h1 class="form-label">Total Price: {{ totalPriceInCheckIn | number }}</h1>
+                <span style="font-size: 25px;">Total Price: </span>
+                <span style="color: #910C07; font-size: 25px;">{{ totalPriceInCheckIn | number }}</span>
             </div>
             <div class="col-md-12" style="text-align: center;">
-                <button [disabled]="checkoutForm.invalid" type="submit" class="btn btn-outline-secondary px-5"
-                    style="color: red;" (click)="sendReceipt()">Send Receipt</button>
+                <button [disabled]="checkoutForm.invalid" type="submit" mat-raised-button
+                    style="color: #910C07;" (click)="sendReceipt()">Send Receipt</button>
             </div>
         </form>
     </div>
