--- a/src/app/compliments/compliments.component.html
+++ b/src/app/compliments/compliments.component.html
@@ -3,7 +3,7 @@
     <h3 class="mb-0"> No compliments for the day</h3>
 </div>
 <div class="container p-3 mx-auto" *ngIf="count > 0">
-    <table class="table table-hover">
+    <table class="table table-borderless">
         <thead>
           <tr>
             <th scope="col">#</th>
