--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,81 +1,92 @@
 <app-top-nav></app-top-nav>
 <!-- If json is empty -->
-<div class="container-fluid blockquote text-center mrg-top" *ngIf="count <= 0">
+ <div class="container-fluid blockquote text-center mrg-top" *ngIf="count <= 0">
     <h3 class="mb-0"> Welcome</h3>
     <small class="text-muted">Scan to add to cart</small>
 </div>
 <div class="container p-3 mx-auto" *ngIf="count > 0">
-    <table class="table table-borderless">
-        <thead>
-            <tr>
-                <th class="align-middle text-center">
-                    Name
-                </th>
-                <th class="align-middle text-center">
-                    Quantity
-                </th>
-                <th class="align-middle text-center">
-                    Price
-                </th>
-                <th class="align-middle text-center">
-                    Expiry date
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let product of products ">
-                <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit">
-                        <input type="text" [(ngModel)]="product.name" class="form-control"/>
+    <table mat-table [dataSource]="dataSource" class="table table-borderless" style="background: #83d3d4;">
+  
+        <!-- id Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}}</td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.isEdit">
+                <input type="text" [(ngModel)]="element.name" class="form-control"/>
+            </div>
+            <div *ngIf="!element.isEdit">
+                <span>{{ element.name }}</span>
+            </div>
+          </td>
+        </ng-container>
+  
+        <!-- Price Column -->
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef> Price </th>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.isEdit">
+                    <input type="text" [(ngModel)]="element.price" class="form-control"/>
+                </div>
+                <div *ngIf="!element.isEdit">
+                    <span>{{ element.price }}</span>
+                </div>
+            </td>
+        </ng-container>
+    
+        <!-- quantity Column -->
+        <ng-container matColumnDef="quantity">
+          <th mat-header-cell *matHeaderCellDef> Quantity </th>
+          <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.isEdit">
+                <input type="text" [(ngModel)]="element.quantity" class="form-control"/>
+            </div>
+            <div *ngIf="!element.isEdit">
+                <span>{{ element.quantity }}</span>
+            </div>
+          </td>
+        </ng-container>
+    
+        <!-- expireDate Column -->
+        <ng-container matColumnDef="expireDate">
+          <th mat-header-cell *matHeaderCellDef> ExpireDate </th>
+          <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.isEdit">
+                <input type="text" [(ngModel)]="element.expireDate" class="form-control"/>
+            </div>
+            <div *ngIf="!element.isEdit">
+                <span>{{ element.expireDate }}</span>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- Edit, Save and Cancel -->
+        <ng-container  matColumnDef="isEdit">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element" class="align-middle text-center">
+                <div *ngIf="!element.isEdit">
+                    <button (click)="openDialog(element)" mat-button color="primary">Edit</button>
+                </div>
+                <div *ngIf="element.isEdit" class="row">
+                    <div class="col my-1">
+                        <button (click)="onTableSave(element)" mat-button class="btn-sm">Save </button>
                     </div>
-                    <div *ngIf="!product.isEdit">
-                        <span>{{ product.name }}</span>
+                    <div class="col my-1">
+                        <button (click)="element.isEdit = false" mat-button class="btn-sm">Cancel</button>
                     </div>
-                </td>
-                <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit">
-                        <input type="text" [(ngModel)]="product.quantity" class="form-control"/>
-                    </div>
-                    <div *ngIf="!product.isEdit">
-                        <span>{{ product.quantity }}</span>
-                    </div>
-                </td>
-                <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit">
-                        <input type="text" [(ngModel)]="product.price" class="form-control"/>
-                    </div>
-                    <div *ngIf="!product.isEdit">
-                        <span>{{ product.price }}</span>
-                    </div>
-                </td>
-                <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit">
-                        <input type="text" [(ngModel)]="product.expireDate" class="form-control"/>
-                    </div>
-                    <div *ngIf="!product.isEdit">
-                        <span>{{ product.expireDate }}</span>
-                    </div>
-                </td>
-                <td class="align-middle text-center">
-                    <div *ngIf="product.isEdit" class="row">
-                        <div class="col my-1">
-                            <button (click)="onTableSave(product)" mat-button class="btn-sm">Save </button>
-                        </div>
-                        <div class="col my-1">
-                            <button (click)="product.isEdit = false" mat-button class="btn-sm">Cancel</button>
-                        </div>
-                    </div>
-                    <!-- open the edit table directly -->
-                    <div *ngIf="!product.isEdit">
-                        <button (click)="openDialog(product)" mat-button color="primary">Edit</button>
-                    </div>
-                    <!-- open the pop up -->
-                    <!-- <div *ngIf="!product.isEdit">
-                        <button (click)="onTableEdit(product)" class="btn btn-primary btn-sm">Edit</button>
-                    </div> -->
-                </td>
-            </tr>
-        </tbody>
-    </table>
+                </div> 
+            </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+      <mat-paginator [pageSizeOptions]="[5]" aria-label="Select page of product List" style="background: #83d3d4;"></mat-paginator>
 </div>
 <app-bottom-nav></app-bottom-nav>
